--- a/files/portfolio.html
+++ b/files/portfolio.html
@@ -56,8 +56,8 @@
 	<!-- Main Content -->
 	<div class="container-fluid">
 		<h1>I TOTALLY CHANGED SOME INFO</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
+		<h1>I am continuing to change things</h1>
+		<h1>This is so I can work on my "dev" branch</h1>
 		<h1>This is some info about Keith</h1>
 		<h1>This is some info about Keith</h1>
 		<h1>This is some info about Keith</h1>
