--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-		<title>Keith Yoerg's Portfolio</title>
+		<title>Keith Yoerg</title>
 		
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/cover.css">
+		<link rel="icon" href="images/Keith.png">
 	</head>
 	
 	<style>
@@ -31,7 +32,17 @@
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#">Home</a></li>
-					<li><a href="files/portfolio.html">Portfolio</a></li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown"
+						href="files/portfolio.html">Portfolio
+						<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="files/education.html">Education</a></li>
+							<li><a href="files/professional.html">Professional Experience</a></li>
+							<li><a href="files/projects.html">Projects</a></li>
+							<li><a href="files/certs.html">Certifications</a></li>
+						</ul>
+					</li>
 					<li><a href="files/fam_history.html">Family History</a></li>
 					<li><a href="files/projects.html">Projects</a></li>
 					<li><a href="files/hobbies.html">Hobbies</a></li>
@@ -46,10 +57,23 @@
 	
 	<!-- Main Content -->
 	<div class="container-fluid">
-		<h1>Sand Dunes to Moons</h1>
-		<p>Afflicted with the belief that the most inspiring feats of humanity
-		STEM from engineering the legacy of the aerospace industry.</p>
+		<div class="text-box">
+			<h1>Sand Dunes to Moons</h1>
+			<br>
+			<p>I'm an engineer afflicted with the belief that the most inspiring
+			feats of humanity STEM from expanding the legacy of the aerospace industry.</p>
+			<br>
+			<p>Explore this site to learn more about my interests and talents, and feel free to
+			<a href="files/contact.html">contact me</a>.</p>
+		</div>
 	</div>
+	
+	<!-- Footer -->
+	<footer class="footer">
+		<div>
+			<p>&#169; 2016 Keith Yoerg</p>
+		</div>
+	</footer>
 	
 	<!-- Bootstrap core JavaScript -->
 	<script src="js/jquery-3.1.0.min.js" type="text/javascript"></script>
