Created education & "secret" portfolio page. Updated navbar links to point correctly.

--- a/files/portfolio.html
+++ b/files/portfolio.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/standard.css">
 	</head>
 
-	<style type="text/css">
+	<style>
 	
 	</style>
 	
@@ -33,11 +33,11 @@
 					<li><a href="../index.html">Home</a></li>
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown"
-						href="portfolio.html">Portfolio
+						href="#">Portfolio
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="education.html">Education</a></li>
-							<li class="active"><a href="#">Professional Experience</a></li>
+							<li><a href="professional.html">Professional Experience</a></li>
 							<li><a href="skills.html">Skills & Certifications</a></li>
 							<li><a href="resume.pdf">Resume as .pdf</a></li>
 						</ul>
@@ -57,47 +57,16 @@
 	<!-- Header -->
 	<div class="container-fluid">
 		<div class="page-header">
-			<h1 align:"center">Keith William Yoerg</h1>
-			<p>B.S. Astronautical Engineering from the <a href="http://
-			www.usc.edu" target="_blank">University of Southern California </a>
-			(May 2016)</p>
+			<h1 align:"center">THIS IS A HIDDEN PAGE</h1>
+			<h3>Congrats on finding this.</h3>
 		</div>
 	</div>
 	
 	<!-- Main Content -->
 	<div class="container-fluid">
-		<h1>Professional Experience</h1>
-		<div class="row">
-			<div class="col-sm-4" style="background-color:#BBBBBB;">
-				<h3 class="title">Research Associate</h3>
-				<h4 class="company"><a href="http://www.isi.edu/centers/serc/home" target="_blank">
-				USC Space Engineering Research Center</a></h4>
-			</div>
-		
-			<div class="col-sm-4">
-				<h3 class="title">Intern</h3>
-				<h4 class="company"><a href="https://www.orbitalatk.com/defense-systems/armament-systems/" target="_blank">
-				ATK Advanced Weapons</a></h4>
-			</div>
-			
-			<div class="col-sm-4" style="background-color:#BBBBBB;">
-				<h3 class="title">Office Manager</h3>
-				<h4 class="company"><a href="http://www.acbdances.com/" target="_blank">
-				American Contemporary Ballet</a></h4>
-			</div>
-		</div>
-		
-		<h1>I TOTALLY CHANGED SOME INFO</h1>
-		<h1>I am continuing to change things</h1>
-		<h1>This is so I can work on my "dev" branch</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
+		<h1>Here are the secret launch codes</h1>
+		<p>Username: admin</p>
+		<p>Password: password</p>
 	</div>
 	
 	<!-- Footer -->
