--- a/files/education.html
+++ b/files/education.html
@@ -12,7 +12,9 @@
 	</head>
 
 	<style type="text/css">
-	
+		#small{
+			font-size: 65%;
+		}
 	</style>
 	
 	<body>
@@ -36,8 +38,8 @@
 						href="portfolio.html">Portfolio
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="education.html">Education</a></li>
-							<li class="active"><a href="#">Professional Experience</a></li>
+							<li class="active"><a href="#">Education</a></li>
+							<li><a href="professional.html">Professional Experience</a></li>
 							<li><a href="skills.html">Skills & Certifications</a></li>
 							<li><a href="resume.pdf">Resume as .pdf</a></li>
 						</ul>
@@ -57,47 +59,32 @@
 	<!-- Header -->
 	<div class="container-fluid">
 		<div class="page-header">
-			<h1 align:"center">Keith William Yoerg</h1>
-			<p>B.S. Astronautical Engineering from the <a href="http://
-			www.usc.edu" target="_blank">University of Southern California </a>
-			(May 2016)</p>
+			<div class="row">
+				<div class="col-sm-2">
+					<figure>
+						<img src="../images/SC_seal.jpg"
+						alt="The Seal of USC" width="125" height="125">
+					</figure>
+				</div>
+				<div class="col-sm-8" style="margin-top: -10px; font-variant: small-caps;">
+					<h1>B.S. <span id="small">in</span> Astronautical Engineering</h1>
+					<h2><span id="small">from the</span>
+					<a href="http://www.usc.edu" target="_blank">University of Southern California </a></h2>
+					<h3>Conferred May 13<sup>th</sup>, 2016</h3>
+				</div>
+				<div class="col-sm-2">
+					<figure>
+						<img src="../images/sc_trojans.jpg" style="margin: 10px;"
+						alt="The logo of USC" width="100" height="100">
+					</figure>
+				</div>
+			</div>
 		</div>
 	</div>
 	
 	<!-- Main Content -->
 	<div class="container-fluid">
-		<h1>Professional Experience</h1>
-		<div class="row">
-			<div class="col-sm-4" style="background-color:#BBBBBB;">
-				<h3 class="title">Research Associate</h3>
-				<h4 class="company"><a href="http://www.isi.edu/centers/serc/home" target="_blank">
-				USC Space Engineering Research Center</a></h4>
-			</div>
-		
-			<div class="col-sm-4">
-				<h3 class="title">Intern</h3>
-				<h4 class="company"><a href="https://www.orbitalatk.com/defense-systems/armament-systems/" target="_blank">
-				ATK Advanced Weapons</a></h4>
-			</div>
-			
-			<div class="col-sm-4" style="background-color:#BBBBBB;">
-				<h3 class="title">Office Manager</h3>
-				<h4 class="company"><a href="http://www.acbdances.com/" target="_blank">
-				American Contemporary Ballet</a></h4>
-			</div>
-		</div>
-		
-		<h1>I TOTALLY CHANGED SOME INFO</h1>
-		<h1>I am continuing to change things</h1>
-		<h1>This is so I can work on my "dev" branch</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
+		<h1>Classes</h1>
 	</div>
 	
 	<!-- Footer -->
