--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 						<ul class="dropdown-menu">
 							<li><a href="files/education.html">Education</a></li>
 							<li><a href="files/professional.html">Professional Experience</a></li>
-							<li><a href="files/projects.html">Projects</a></li>
-							<li><a href="files/certs.html">Certifications</a></li>
+							<li><a href="files/skills.html">Skills & Certifications</a></li>
+							<li><a href="files/resume.pdf">Resume as .pdf</a></li>
 						</ul>
 					</li>
-					<li><a href="files/fam_history.html">Family History</a></li>
 					<li><a href="files/projects.html">Projects</a></li>
-					<li><a href="files/hobbies.html">Hobbies</a></li>
+					<li><a href="files/fam_history.html">Family History</a></li>
+					<li><a href="files/hobbies.html">Other Interests</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="files/contact.html"><span class="glyphicon glyphicon-envelope"></span>
