--- a/files/portfolio.html
+++ b/files/portfolio.html
@@ -5,13 +5,14 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-		<title>Keith Yoerg's Portfolio</title>
+		<title>SECRET PAGE</title>
 		
 		<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="../css/standard.css">
+		<link rel="icon" href="../images/Keith.png">
 	</head>
 
-	<style>
+	<style type="text/css">
 	
 	</style>
 	
