--- a/files/professional.html
+++ b/files/professional.html
@@ -5,10 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-		<title>Keith Yoerg's Portfolio</title>
+		<title>Keith Yoerg's Experience</title>
 		
 		<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="../css/standard.css">
+		<link rel="icon" href="../images/Keith.png">
 	</head>
 
 	<style type="text/css">
