Updated standard css to fit edu & professional pages. Formatted & added info to Main section of pro page.

--- a/files/education.html
+++ b/files/education.html
@@ -16,15 +16,6 @@
 		#small{
 			font-size: 65%;
 		}
-		
-		#panels{
-			text-align: center;
-		}
-		
-		#courses{
-			list-style-type: square;
-			font-size: 125%;
-		}
 	</style>
 	
 	<body>
@@ -76,7 +67,7 @@
 						alt="The Seal of USC" width="125" height="125">
 					</figure>
 				</div>
-				<div class="col-sm-6" style="margin-top: -10px; font-variant: small-caps;">
+				<div class="col-sm-6" style="font-variant: small-caps;">
 					<h1>B.S. <span id="small">in</span> Astronautical Engineering</h1>
 					<h2><span id="small">from the</span>
 					<a href="http://www.usc.edu" target="_blank">University of Southern California </a></h2>
@@ -94,16 +85,16 @@
 	
 	<!-- Main Content -->
 	<div class="container-fluid">
-		<h1 style="text-align: center;">Overview of Coursework</h1>
+		<h1 class="center">Overview of Coursework</h1>
 		<br>
 		<div class="row">
 			<div class="col-sm-4">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						<h3 id="panels">Mechanical/Aerospace Courses</h3>
+						<h3 class="center">Mechanical/Aerospace Courses</h3>
 					</div>
 					<div class="panel-body">
-						<ul id="courses">
+						<ul class="bullets">
 							<li>AME-150: Intro to Computational Methods (MATLAB)</li>
 							<li>AME-201: Statics</li>
 							<li>AME-204: Strength of Materials</li>
@@ -119,10 +110,10 @@
 			<div class="col-sm-4">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						<h3 id="panels">Astronautics Courses</h3>
+						<h3 class="center">Astronautics Courses</h3>
 					</div>
 					<div class="panel-body">
-						<ul id="courses">
+						<ul class="bullets">
 							<li>ASTE-280/330: Astronautics & Space Environment I & II</li>
 							<li>ASTE-421: Space Mission Design</li>
 							<li>ASTE-470: Spacecraft Propulsion</li>
@@ -134,10 +125,10 @@
 			<div class="col-sm-4">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						<h3 id="panels">Other Relavent Courses</h3>
+						<h3 class="center">Other Relavent Courses</h3>
 					</div>
 					<div class="panel-body">
-						<ul id="courses">
+						<ul class="bullets">
 							<li>PHYS-161: Honors Mechanics & Thermodynamics</li>
 							<li>PHYS-162: Honors Electricity & Magnetsim</li>
 							<li>PHYS-163: Honors Optics & Modern Physics</li>
