--- a/files/professional.html
+++ b/files/professional.html
@@ -13,7 +13,10 @@
 	</head>
 
 	<style type="text/css">
-	
+		#title{
+			text-transform: uppercase;
+			text-align: center;
+		}
 	</style>
 	
 	<body>
@@ -67,38 +70,64 @@
 	
 	<!-- Main Content -->
 	<div class="container-fluid">
-		<h1>Professional Experience</h1>
+		<h1 class="center">Professional Experience</h1>
+		<br>
 		<div class="row">
-			<div class="col-sm-4" style="background-color:#BBBBBB;">
-				<h3 class="title">Research Associate</h3>
-				<h4 class="company"><a href="http://www.isi.edu/centers/serc/home" target="_blank">
-				USC Space Engineering Research Center</a></h4>
+			<div class="col-sm-4 col-sm-push-4">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 id="title">Research Associate</h3>
+						<h4 class="center">USC Space Engineering Research Center</h4>
+						<h5 class="center">February 2016 - May 2016</h5>
+					</div>
+					<div class="panel-body">
+						<ul class="bullets">
+							<li class="bull_space">Designed and assembled air bearing free flight platforms to
+							test spacecraft attitude control systems and docking mechanisms.</li>
+							<li>Repaired bell-jar vacuum tables to a 10<sup>-5</sup> Torr capability
+							for CubeSat testing.</li>
+						</ul>
+					</div>
+				</div>
 			</div>
-		
+			<div class="col-sm-4 col-sm-pull-4">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 id="title">Intern</h3>
+						<h4 class="center">ATK Advanced Weapons</h4>
+						<h5 class="center">May 2009 - August 2009</h5>
+					</div>
+					<div class="panel-body">
+						<ul class="bullets">
+							<li class="bull_space">Engineered, tested, and presented potential hardware alterations
+							to the Precision Guidance Kit (PGK) cover to senior engineers for future
+							implementation.</li>
+							<li class="bull_space">Drafted molds and created drawings in Pro-Engineer CAD that were
+							machined & used to create hardware.</li>
+							<li>Oversaw tests and compiled data for 25mm and 20mm Airburst munitions.</li>
+						</ul>
+					</div>
+				</div>
+			</div>
 			<div class="col-sm-4">
-				<h3 class="title">Intern</h3>
-				<h4 class="company"><a href="https://www.orbitalatk.com/defense-systems/armament-systems/" target="_blank">
-				ATK Advanced Weapons</a></h4>
-			</div>
-			
-			<div class="col-sm-4" style="background-color:#BBBBBB;">
-				<h3 class="title">Office Manager</h3>
-				<h4 class="company"><a href="http://www.acbdances.com/" target="_blank">
-				American Contemporary Ballet</a></h4>
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 id="title">Office Manager</h3>
+						<h4 class="center">American Contemporary Ballet</h4>
+						<h5 class="center">June 2014 - July 2015</h5>
+					</div>
+					<div class="panel-body">
+						<ul class="bullets">
+							<li class="bull_space">Developed organizational structure to facilitate a 15% donation increase per year.</li>
+							<li class="bull_space">Directed operations including the budget, scheduling, permits, payments, ticketing,
+							reception, press, and staff for performance runs with 500 audience members.</li>
+							<li>Recorded company income/expenses in QuickBooks and used the data to create and
+							analyze budget reports.</li>
+						</ul>
+					</div>
+				</div>
 			</div>
 		</div>
-		
-		<h1>I TOTALLY CHANGED SOME INFO</h1>
-		<h1>I am continuing to change things</h1>
-		<h1>This is so I can work on my "dev" branch</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
-		<h1>This is some info about Keith</h1>
 	</div>
 	
 	<!-- Footer -->
