Updated pro page to include company logos & links. Created skills page & started carousel. Added picture files.

--- a/files/education.html
+++ b/files/education.html
@@ -13,9 +13,7 @@
 	</head>
 
 	<style type="text/css">
-		#small{
-			font-size: 65%;
-		}
+	
 	</style>
 	
 	<body>
@@ -67,7 +65,7 @@
 						alt="The Seal of USC" width="125" height="125">
 					</figure>
 				</div>
-				<div class="col-sm-6" style="font-variant: small-caps;">
+				<div class="col-sm-6">
 					<h1>B.S. <span id="small">in</span> Astronautical Engineering</h1>
 					<h2><span id="small">from the</span>
 					<a href="http://www.usc.edu" target="_blank">University of Southern California </a></h2>
@@ -75,7 +73,7 @@
 				</div>
 				<div class="col-sm-3">
 					<figure>
-						<img src="../images/sc_trojans.jpg" style="margin-top: 10px;"
+						<img src="../images/viterbi2.png" style="margin-left: 20px;"
 						alt="The logo of USC" width="125" height="100">
 					</figure>
 				</div>
