--- a/files/professional.html
+++ b/files/professional.html
@@ -61,29 +61,39 @@
 	<!-- Header -->
 	<div class="container-fluid">
 		<div class="page-header">
-			<h1 align:"center">Keith William Yoerg</h1>
-			<p>B.S. Astronautical Engineering from the <a href="http://
-			www.usc.edu" target="_blank">University of Southern California </a>
-			(May 2016)</p>
+			<div class="row">
+				<div class="col-sm-3">
+				</div>
+				<div class="col-sm-6">
+					<h1>Professional Experience</h1>
+					<h2>Specialties:</h2>
+					<h3 style="margin-top: -10px">Mechanical Design, Implementation & Testing;
+					CAD Modeling; Data Acquisition & Analysis</h3>
+				</div>
+				<div class="col-sm-3">
+				</div>
+			</div>
 		</div>
 	</div>
 	
 	<!-- Main Content -->
 	<div class="container-fluid">
-		<h1 class="center">Professional Experience</h1>
+		<h1 class="center">Employment History</h1>
 		<br>
 		<div class="row">
 			<div class="col-sm-4 col-sm-push-4">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h3 id="title">Research Associate</h3>
-						<h4 class="center">USC Space Engineering Research Center</h4>
+						<img class="center-block" src="../images/viterbi.png" alt="USC Viterbi School Logo">
+						<h4 class="center"><a href="http://www.isi.edu/centers/serc/cellularized_spacecraft"
+						target="blank">USC Space Engineering Research Center</a></h4>
 						<h5 class="center">February 2016 - May 2016</h5>
 					</div>
 					<div class="panel-body">
 						<ul class="bullets">
 							<li class="bull_space">Designed and assembled air bearing free flight platforms to
-							test spacecraft attitude control systems and docking mechanisms.</li>
+							serve as a testbed for cellularized spacecraft research.</li>
 							<li>Repaired bell-jar vacuum tables to a 10<sup>-5</sup> Torr capability
 							for CubeSat testing.</li>
 						</ul>
@@ -94,7 +104,9 @@
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h3 id="title">Intern</h3>
-						<h4 class="center">ATK Advanced Weapons</h4>
+						<img class="center-block" src="../images/atk.png" alt="ATK Logo">
+						<h4 class="center"><a href="https://www.orbitalatk.com/defense-systems/armament-systems/"
+						target="blank">ATK Advanced Weapons</a></h4>
 						<h5 class="center">May 2009 - August 2009</h5>
 					</div>
 					<div class="panel-body">
@@ -113,7 +125,9 @@
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h3 id="title">Office Manager</h3>
-						<h4 class="center">American Contemporary Ballet</h4>
+						<img class="center-block" src="../images/acb.png" alt="USC Viterbi School">
+						<h4 class="center"><a href="http://www.acbdances.com/"
+						target="blank">American Contemporary Ballet</a></h4>
 						<h5 class="center">June 2014 - July 2015</h5>
 					</div>
 					<div class="panel-body">
