Added featurettes to skills page & updated pictures/links

--- a/files/professional.html
+++ b/files/professional.html
@@ -42,7 +42,7 @@
 						<ul class="dropdown-menu">
 							<li><a href="education.html">Education</a></li>
 							<li class="active"><a href="#">Professional Experience</a></li>
-							<li><a href="skills.html">Skills & Certifications</a></li>
+							<li><a href="skills.html">Certifications & Skills</a></li>
 							<li><a href="resume.pdf">Resume as .pdf</a></li>
 						</ul>
 					</li>
