--- a/files/skills.html
+++ b/files/skills.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-		<title>Keith Yoerg's Skills & Certs</title>
+		<title>Keith Yoerg's Certs & Skills</title>
 		
 		<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="../css/standard.css">
@@ -40,7 +40,7 @@
 						<ul class="dropdown-menu">
 							<li><a href="education.html">Education</a></li>
 							<li><a href="professional.html">Professional Experience</a></li>
-							<li class="active"><a href="#">Skills & Certifications</a></li>
+							<li class="active"><a href="#">Certifications & Skills</a></li>
 							<li><a href="resume.pdf">Resume as .pdf</a></li>
 						</ul>
 					</li>
@@ -57,9 +57,9 @@
 	</nav>
 	
 	<!-- Header -->
-	<div class="container-fluid">
+	<div class="container-fluid" id="top">
 		<div class="page-header">
-			<h1 style="padding-top: 15px;">Skills & Certifications</h1>
+			<h1 style="padding-top: 15px;">Certifications & Skills</h1>
 		</div>
 	</div>
 	
@@ -70,16 +70,41 @@
 			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 			<li data-target="#myCarousel" data-slide-to="1"></li>
 			<li data-target="#myCarousel" data-slide-to="2"></li>
+			<li data-target="#myCarousel" data-slide-to="3"></li>
 		</ol>
+		<!-- Carousel Items -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
 				<img class="first-slide" src="../images/engineer.jpg" alt="Engineer-In-Training Cert">
+				<div class="container">
+					<div class="carousel-caption">
+						<p><a class="btn btn-lg btn-info" href="#EIT_Cert" role="button">EIT Certified</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<img class="second-slide" src="../images/thermometer.jpg" alt="SolidWorks Bike Project">
+				<div class="container">
+					<div class="carousel-caption">
+						<p><a class="btn btn-lg btn-info" href="#SolidWorks" role="button">SolidWorks Associate</a></p>
+					</div>
+				</div>
 			</div>
 			<div class="item">
 				<img class="second-slide" src="../images/me_flying.jpg" alt="Flying a Cessna 172">
+				<div class="container">
+					<div class="carousel-caption">
+						<p><a class="btn btn-lg btn-info" href="#Pilot" role="button">Private Pilot</a></p>
+					</div>
+				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/bike.jpg" alt="SolidWorks Bike Project">
+				<img class="second-slide" src="../images/coding.jpg" alt="Coding for this Page">
+				<div class="container">
+					<div class="carousel-caption">
+						<p><a class="btn btn-lg btn-info" href="#Skills" role="button">Other Skills</a></p>
+					</div>
+				</div>
 			</div>
 		</div>
 	  <!-- Left/Right Controls -->
@@ -92,6 +117,62 @@
 			<span class="sr-only">Next</span>
 		</a>
 	</div>
+	
+	<!-- "Featurette" Section -->
+	<div class="container marketing">
+		<hr class="featurette-divider" id="EIT_Cert">
+		<div class="row featurette">
+			<div class="col-md-7">
+				<h2 class="featurette-heading">NCEES Engineer-In-Training</h2>
+				<p class="lead">More info goes here</p>
+			</div>
+			<div class="col-md-5">
+				<img class="featurette-image img-responsive center-block" src="../images/engineer.jpg"
+				alt="Engineer-In-Training Cert">
+			</div>
+		</div>
+	
+		<hr class="featurette-divider" id="SolidWorks">
+		<div class="row featurette">
+			<div class="col-md-7 col-md-push-5">
+				<h2 class="featurette-heading">Certified SolidWorks Associate</h2>
+				<p class="lead">More info goes here</p>
+			</div>
+			<div class="col-md-5 col-md-pull-7">
+				<img class="featurette-image img-responsive center-block" src="../images/SolidWorks.jpg"
+				alt="SolidWorks Cert">
+			</div>
+		</div>
+		
+		<hr class="featurette-divider" id="Pilot">
+		<div class="row featurette">
+			<div class="col-md-7">
+				<h2 class="featurette-heading">Private Pilot</h2>
+				<p class="lead">More info goes here</p>
+			</div>
+			<div class="col-md-5">
+				<img class="featurette-image img-responsive center-block" src="../images/License.jpg"
+				alt="Private Pilot's License">
+			</div>
+		</div>
+		
+		<hr class="featurette-divider" id="Skills">
+		<div class="row featurette">
+			<div class="col-md-7 col-md-push-5">
+				<h2 class="featurette-heading">Other Technical Skills</h2>
+				<p class="lead">More info goes here</p>
+			</div>
+			<div class="col-md-5 col-md-pull-7">
+				<img class="featurette-image img-responsive center-block" src="../images/database.jpg"
+				alt="SolidWorks Cert">
+			</div>
+		</div>
+		
+		<hr class="featurette-divider" id="SolidWorks">
+	</div>
+	
+	<p class="center"><a href="#top">Return to Top</a></p>
+	<br>
 	
 	<!-- Footer -->
 	<footer class="footer">
