--- a/files/education.html
+++ b/files/education.html
@@ -39,7 +39,7 @@
 						<ul class="dropdown-menu">
 							<li class="active"><a href="#">Education</a></li>
 							<li><a href="professional.html">Professional Experience</a></li>
-							<li><a href="skills.html">Skills & Certifications</a></li>
+							<li><a href="skills.html">Certifications & Skills</a></li>
 							<li><a href="resume.pdf">Resume as .pdf</a></li>
 						</ul>
 					</li>
