--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<ul class="dropdown-menu">
 							<li><a href="files/education.html">Education</a></li>
 							<li><a href="files/professional.html">Professional Experience</a></li>
-							<li><a href="files/skills.html">Skills & Certifications</a></li>
+							<li><a href="files/skills.html">Certifications & Skills</a></li>
 							<li><a href="files/resume.pdf">Resume as .pdf</a></li>
 						</ul>
 					</li>
