Added projects dropdown in navbar. Changed skills from carousel to panels. Began personal project page (w/ carousel).

--- a/files/education.html
+++ b/files/education.html
@@ -43,7 +43,15 @@
 							<li><a href="resume.pdf">Resume as .pdf</a></li>
 						</ul>
 					</li>
-					<li><a href="projects.html">Projects</a></li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown"
+						href="projects.html">Projects
+						<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="academic_proj.html">Academic</a></li>
+							<li><a href="personal_proj.html">Personal</a></li>
+						</ul>
+					</li>
 					<li><a href="fam_history.html">Family History</a></li>
 					<li><a href="hobbies.html">Other Interests</a></li>
 				</ul>
@@ -68,7 +76,8 @@
 				<div class="col-sm-6">
 					<h1>B.S. <span id="small">in</span> Astronautical Engineering</h1>
 					<h2><span id="small">from the</span>
-					<a href="http://www.usc.edu" target="_blank">University of Southern California </a></h2>
+					<a href="http://www.usc.edu" target="_blank" data-toggle="tooltip" title="www.usc.edu">
+					University of Southern California </a></h2>
 					<h3>Conferred May 13<sup>th</sup>, 2016</h3>
 				</div>
 				<div class="col-sm-3">
