--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
 							<li><a href="files/resume.pdf">Resume as .pdf</a></li>
 						</ul>
 					</li>
-					<li><a href="files/projects.html">Projects</a></li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown"
+						href="files/projects.html">Projects
+						<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="files/academic_proj.html">Academic</a></li>
+							<li><a href="files/personal_proj.html">Personal</a></li>
+						</ul>
+					</li>
 					<li><a href="files/fam_history.html">Family History</a></li>
 					<li><a href="files/hobbies.html">Other Interests</a></li>
 				</ul>
