--- a/files/skills.html
+++ b/files/skills.html
@@ -44,7 +44,15 @@
 							<li><a href="resume.pdf">Resume as .pdf</a></li>
 						</ul>
 					</li>
-					<li><a href="projects.html">Projects</a></li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown"
+						href="projects.html">Projects
+						<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="academic_proj.html">Academic</a></li>
+							<li><a href="personal_proj.html">Personal</a></li>
+						</ul>
+					</li>
 					<li><a href="fam_history.html">Family History</a></li>
 					<li><a href="hobbies.html">Other Interests</a></li>
 				</ul>
@@ -59,118 +67,150 @@
 	<!-- Header -->
 	<div class="container-fluid" id="top">
 		<div class="page-header">
-			<h1 style="padding-top: 15px;">Certifications & Skills</h1>
+			<div class="row">
+				<div class="col-sm-3">
+				</div>
+				<div class="col-sm-6">
+					<h1>Certifications & Skills</h1>
+					<h2><a href="#certs">Engineering Certificates</a></h2>
+					<h2><a href="#skills">Skills</a> using modern engineering tools</h2>
+				</div>
+				<div class="col-sm-3">
+				</div>
+			</div>
 		</div>
 	</div>
 	
-	<!-- Carousel -->
-	<div id="myCarousel" class="carousel slide" data-ride="carousel">
-		<!-- Indicators -->
-		<ol class="carousel-indicators">
-			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-			<li data-target="#myCarousel" data-slide-to="1"></li>
-			<li data-target="#myCarousel" data-slide-to="2"></li>
-			<li data-target="#myCarousel" data-slide-to="3"></li>
-		</ol>
-		<!-- Carousel Items -->
-		<div class="carousel-inner" role="listbox">
-			<div class="item active">
-				<img class="first-slide" src="../images/engineer.jpg" alt="Engineer-In-Training Cert">
-				<div class="container">
-					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#EIT_Cert" role="button">EIT Certified</a></p>
+	<!-- Certifications -->
+	<div class="container-fluid" id="certs">
+		<h1 class="center">Certifications</h1>
+		<div class="row">
+			<div class="col-sm-6">
+				<h2 class="center">Professional</h2>
+				<div class="col-md-6">
+					<div class="panel panel-default">
+						<div class="panel-heading" id="center">
+							<h3 id="title">Engineer-In-Training</h3>
+							<h4>NCEES</h4>
+							<h5>Earned July 2016</h5>
+						</div>
+						<div class="panel-body">
+							<img class="center-block" src="../images/Engineer.jpg"
+							alt="Engineer-In-Training Cert" id="fit">
+						</div>
+					</div>
+				</div>
+				
+				<div class="col-md-6">
+					<div class="panel panel-default">
+						<div class="panel-heading" id="center">
+							<h3 id="title">SolidWorks Associate</h3>
+							<h4>Dassault Syst&egrave;mes</h4>
+							<h5>Earned October 2010</h5>
+						</div>
+						<div class="panel-body">
+							<img class="center-block" src="../images/SolidWorks.jpg"
+							alt="SolidWorks Cert" id="fit">
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="item">
-				<img class="second-slide" src="../images/thermometer.jpg" alt="SolidWorks Bike Project">
-				<div class="container">
-					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#SolidWorks" role="button">SolidWorks Associate</a></p>
+
+			<div class="col-sm-6">
+				<h2 class="center">Recreational</h2>
+				<div class="col-md-6">
+					<div class="panel panel-default">
+						<div class="panel-heading" id="center">
+							<h3 id="title">High Power Rocketry</h3>
+							<h4>Tripoli Rocketry Association</h4>
+							<h5>Earned August 2016</h5>
+						</div>
+						<div class="panel-body" style="padding-bottom: 16.6%;;">
+							<img class="center-block" src="../images/Tripoli.jpeg"
+							alt="Tripoli Level 1 Cert" id="fit">
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="item">
-				<img class="second-slide" src="../images/me_flying.jpg" alt="Flying a Cessna 172">
-				<div class="container">
-					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#Pilot" role="button">Private Pilot</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="item">
-				<img class="second-slide" src="../images/coding.jpg" alt="Coding for this Page">
-				<div class="container">
-					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#Skills" role="button">Other Skills</a></p>
+				
+				<div class="col-md-6">
+					<div class="panel panel-default">
+						<div class="panel-heading" id="center">
+							<h3 id="title">Private Pilot License</h3>
+							<h4>Dept of Transportation</h4>
+							<h5>Earned August 2012</h4>
+						</div>
+						<div class="panel-body" style="padding-bottom: 16.8%;">
+							<img class="center-block" src="../images/License.jpg"
+							alt="Private Pilot's License" id="fit">
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	  <!-- Left/Right Controls -->
-		<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
-		</a>
-		<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
-		</a>
 	</div>
 	
-	<!-- "Featurette" Section -->
-	<div class="container marketing">
-		<hr class="featurette-divider" id="EIT_Cert">
-		<div class="row featurette">
-			<div class="col-md-7">
-				<h2 class="featurette-heading">NCEES Engineer-In-Training</h2>
-				<p class="lead">More info goes here</p>
+	<!-- Skills -->
+	<hr size="10">
+	<div class="container-fluid" id="skills">
+		<h1 class="center">Skills</h1>
+		<br>
+		<div class="row">
+			<div class="col-sm-4">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="center">Advanced</h3>
+					</div>
+					<div class="panel-body">
+						<ul class="bullets">
+							<li>AME-150: Intro to Computational Methods (MATLAB)</li>
+							<li>AME-201: Statics</li>
+							<li>AME-204: Strength of Materials</li>
+							<li>AME-301: Dynamics</li>
+							<li>AME-308: Computer-Aided Analyses for Aero-Mechanical Design (SolidWorks)</li> 
+							<li>AME-309: Dynamics of Fluids</li>
+							<li>AME-310: Thermodynamics</li>
+							<li>AME-341A&B: Mechoptronics Laboratory</li>
+						</ul>
+					</div>
+				</div>
 			</div>
-			<div class="col-md-5">
-				<img class="featurette-image img-responsive center-block" src="../images/engineer.jpg"
-				alt="Engineer-In-Training Cert">
+			<div class="col-sm-4">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="center">Intermediate</h3>
+					</div>
+					<div class="panel-body">
+						<ul class="bullets">
+							<li>ASTE-280/330: Astronautics & Space Environment I & II</li>
+							<li>ASTE-421: Space Mission Design</li>
+							<li>ASTE-470: Spacecraft Propulsion</li>
+							<li>ASTE-480: Spacecraft Dynamics</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="center">Beginner</h3>
+					</div>
+					<div class="panel-body">
+						<ul class="bullets">
+							<li>PHYS-161: Honors Mechanics & Thermodynamics</li>
+							<li>PHYS-162: Honors Electricity & Magnetsim</li>
+							<li>PHYS-163: Honors Optics & Modern Physics</li>
+							<li>MATH-226: Differential Equations</li>
+							<li>BUAD-301: Technical Entrepreneurship </li> 
+							<li>ISE-382: Database Systems: Concepts, Design and Implementation (MySQL & Oracle)</li>
+							<li>ISE-460: Engineering Economy</li>
+						</ul>
+					</div>
+				</div>
 			</div>
 		</div>
-	
-		<hr class="featurette-divider" id="SolidWorks">
-		<div class="row featurette">
-			<div class="col-md-7 col-md-push-5">
-				<h2 class="featurette-heading">Certified SolidWorks Associate</h2>
-				<p class="lead">More info goes here</p>
-			</div>
-			<div class="col-md-5 col-md-pull-7">
-				<img class="featurette-image img-responsive center-block" src="../images/SolidWorks.jpg"
-				alt="SolidWorks Cert">
-			</div>
-		</div>
-		
-		<hr class="featurette-divider" id="Pilot">
-		<div class="row featurette">
-			<div class="col-md-7">
-				<h2 class="featurette-heading">Private Pilot</h2>
-				<p class="lead">More info goes here</p>
-			</div>
-			<div class="col-md-5">
-				<img class="featurette-image img-responsive center-block" src="../images/License.jpg"
-				alt="Private Pilot's License">
-			</div>
-		</div>
-		
-		<hr class="featurette-divider" id="Skills">
-		<div class="row featurette">
-			<div class="col-md-7 col-md-push-5">
-				<h2 class="featurette-heading">Other Technical Skills</h2>
-				<p class="lead">More info goes here</p>
-			</div>
-			<div class="col-md-5 col-md-pull-7">
-				<img class="featurette-image img-responsive center-block" src="../images/database.jpg"
-				alt="SolidWorks Cert">
-			</div>
-		</div>
-		
-		<hr class="featurette-divider" id="SolidWorks">
 	</div>
 	
+	<!-- Return to Top -->
 	<p class="center"><a href="#top">Return to Top</a></p>
 	<br>
 	
